# libportage

./: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  LICENSE  Makefile  Makefile.am  README  TODO  acinclude.m4  configure.ac  doxygen.cfg  release.sh
doc/: .gitignore  Makefile.am  Requirements.txt  binary_packages.txt  xpak.5  xpak.5.txt  xpak.html  xpak.txt
doc/doxygen/: api-doc  dev-doc
doxygen/: api-doc  dev-doc
include/: Makefile.am  archives.h  atom.h  common.h  dependency.h  liblpatom.h  liblputil.h  liblpxpak.h  util.h  version.h  xpak.h
lib/: Makefile  liblpatom.c  liblpatom.h  liblputil.c  liblputil.h  liblpxpak.c  liblpxpak.h  lpxpak.c  lpxpak.h
replace/: Makefile.am  replace.h  stpcpy.c  strndup.c
src/: Makefile  Makefile.am  liblparchives.c  liblpatom.c  liblputil.c  liblpversion.c  liblpxpak.c
t/: 01_lpatom_parse.c  02_lpxpak_parse.c  Makefile  Makefile.am  atom_test.c  test.sh  xpak_test.c  xpak_test.tbz2
t/lpatom/: Makefile  atom_positive.txt
t/lpxpak/: Makefile
test/: 01_lpatom_parse.c  01_lputil_int64len.c  01_lputil_intlen.c  01_lputil_splitstr.c  01_lputil_splitstr.txt  02_lpatom_parse.c  02_lpatom_parse.txt  02_lpversion_parse.c  02_lpxpak_parse.c  03_lpatom_parse.c  03_lpatom_parse.txt  03_lpxpak.c  04_lparchives.c  04_lparchives.tbz2  04_lpxpak.c  05_lparchives.c  05_lparchives.txt  05_lpversion_parse.c  05_lpversion_parse.txt  Makefile.am  valgrind-wrapper
